# goalrate-desktop

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  GOALRATE_DESKTOP_PRD.md  LICENSE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: release.yml
apps/desktop/: LICENSE  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.integration.ts  vitest.config.ts
apps/desktop/scripts/: prepare-appstore.mjs
apps/desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.appstore.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  menu.rs  types.rs
apps/desktop/src-tauri/src/commands/: agenda.rs  agenda_ai.rs  app_links.rs  auth.rs  daily_loop.rs  daily_loop_ai.rs  focus.rs  goal_milestones.rs  goals.rs  integrations.rs  memory.rs  mod.rs  project_tasks.rs  projects.rs  subscriptions.rs  vault.rs  vault_tasks.rs  window.rs
apps/desktop/src-tauri/storekit/: Package.swift  README.md
apps/desktop/src-tauri/storekit/Sources/GoalrateStoreKit/: GoalrateStoreKit.swift
apps/desktop/src/__tests__/: App.menuActions.test.tsx  firstRunAcceptance.test.tsx  goal.integration.test.ts  tauri-prerequisite.integration.test.ts  vault.integration.test.ts
apps/desktop/src/analytics/events/: focus.ts
apps/desktop/src/analytics/events/__tests__/: focus.test.ts
apps/desktop/src/components/: ConfirmDialog.tsx  ContextMenu.tsx  DatePickerInput.tsx  GoalRateIcon.tsx  IntegrationCanvasPanel.tsx  IntegrationIcons.tsx  MarkdownEditor.tsx  MermaidPreviewDialog.tsx  PublishDialog.tsx  QuickCaptureDialog.tsx  UpdateNotification.tsx  VaultSelector.tsx
apps/desktop/src/components/__tests__/: MarkdownEditor.test.tsx
apps/desktop/src/context/: AuthContext.tsx  PreferencesContext.tsx  SubscriptionContext.tsx  UpdateContext.tsx  VaultContext.tsx
apps/desktop/src/domain/: agendaEngine.ts  agents.ts  index.ts  missedWork.ts  models.ts  vaultMarkdown.ts
apps/desktop/src/domain/__tests__/: agendaEngine.test.ts  agents.test.ts  missedWork.test.ts  vaultAgendaFlow.test.ts  vaultMarkdown.test.ts
apps/desktop/src/flows/__tests__/: goalCreation.flow.test.tsx  vaultCreation.flow.test.tsx
apps/desktop/src/hooks/: useAgenda.ts  useAnyModalOpen.ts  useAuth.ts  useAutoUpdate.ts  useAvailableAiModels.ts  useDailyLoop.ts  useVault.ts
apps/desktop/src/hooks/__tests__/: useAgenda.vaultEvents.test.tsx  useDailyLoop.vaultEvents.test.tsx
apps/desktop/src/lib/: agendaIpc.ts  aiGoalPlanning.ts  apiClient.ts  authBillingEntitlements.ts  createGoalWithAssignee.ts  dailyLoopIpc.ts  featureFlags.ts  goalAssignee.ts  goalDocNaming.ts  integrationRailPreferences.ts  subscriptions.ts  tauriEvents.ts  vaultWatcherEvents.ts
apps/desktop/src/lib/__tests__/: authBillingEntitlements.test.ts  integrationRailPreferences.test.ts  subscriptions.test.ts  vaultWatcherEvents.test.ts
apps/desktop/src/pages/: AgendaApp.tsx  DailyLoopApp.tsx  IntegrationCallbackPage.tsx  LoginPage.tsx  RegisterPage.tsx
apps/desktop/src/pages/__tests__/: AgendaApp.vaultEvents.test.tsx  AgendaApp.vaultRemoval.test.tsx  AgendaApp.watcherContract.test.tsx  DailyLoopApp.vaultEvents.test.tsx  DailyLoopApp.vaultRemoval.test.tsx  DailyLoopApp.watcherContract.test.tsx
apps/desktop/src/pages/agenda/: AiChatPanel.tsx  AssistantMissedWork.tsx  ChatMessageBubble.tsx  CheckInDialog.tsx  DomainSidebar.tsx  IntakeFlow.tsx  PlanGenerateButton.tsx  SettingsPanel.tsx  SubscriptionPanel.tsx  TaskRow.tsx  TodaysPlan.tsx  agendaRows.ts
apps/desktop/src/pages/agenda/__tests__/: AssistantMissedWork.test.tsx  DomainSidebar.notesEdit.test.tsx  DomainSidebar.taskRecurrence.test.tsx  DomainSidebar.vaultEvents.test.tsx  IntakeFlow.test.tsx  PlanGenerateButton.subscription.test.tsx  SettingsPanel.test.tsx  (+5 more)
apps/desktop/src/pages/daily-loop/: AiChatPanel.tsx  AssistantMissedWork.tsx  ChatMessageBubble.tsx  CheckInDialog.tsx  DeferralBanner.tsx  DomainSidebar.tsx  IntakeFlow.tsx  OutcomeCard.tsx  PlanGenerateButton.tsx  SettingsPanel.tsx  SubscriptionPanel.tsx  TaskRow.tsx  TodaysPlan.tsx
apps/desktop/src/test/: integration-setup.ts  setup.ts  tauriIntegration.ts
apps/desktop/src/test/__tests__/: tauriIntegration.test.ts
apps/desktop/src/test/utils/: factories.ts  index.ts  mockTauri.ts  renderWithProviders.tsx
apps/desktop/src/types/: auth.ts  dnd-kit-core.d.ts  storage.d.ts  update.ts
crates/: LICENSE
crates/agenda/: Cargo.toml
crates/agenda/src/: context.rs  db.rs  error.rs  lib.rs  models.rs  prompts.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: aes.rs  chacha.rs  error.rs  keys.rs  lib.rs  x25519.rs
crates/daily-loop/: Cargo.toml
crates/daily-loop/src/: context.rs  db.rs  error.rs  lib.rs  models.rs  prompts.rs
crates/focus-engine/: Cargo.toml
crates/focus-engine/src/: candidates.rs  error.rs  generator.rs  lib.rs  scoring.rs
crates/markdown-parser/: Cargo.toml
crates/markdown-parser/src/: error.rs  frontmatter.rs  lib.rs  parser.rs
crates/sqlite-index/: Cargo.toml
crates/sqlite-index/src/: error.rs  lib.rs  schema.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: config.rs  error.rs  lib.rs  vault.rs  watcher.rs
specs/: AGENDA_ALGORITHM.md  AGENT_RULES.md  README.md  TECHNICAL_SPEC.md  agenda-daily-planning.md  apple-platform-distribution.md  assistant-memory.md  auth-billing-entitlements.md  desktop-app-overview.md  eisenhower-prioritization.md  monetization-strategy.md  roadmap-goals-domains.md  subscription-tiers.md  vault-markdown-storage.md
tooling/eslint-config/: README.md  index.js  library.js  package.json  react.js
tooling/tailwind-config/: README.md  package.json  tsconfig.json  tsup.config.ts
tooling/tailwind-config/src/: colors.ts  index.ts
tooling/typescript-config/: README.md  base.json  library.json  node.json  package.json  react-app.json  react-library.json
(+6 files in other folders)
