[package]
name = "daily-loop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AI Chief of Staff daily planning loop for Goalrate"

[dependencies]
rusqlite.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
log.workspace = true

[dev-dependencies]
tempfile.workspace = true
