[package]
name = "focus-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Focus prioritization engine for Goalrate"

[dependencies]
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
